fix alignment?

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,15 +10,5 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-div.image {
-  vertical-align: middle;
-  display: inline-block;
-  text-align: center;
-}
-img {
-  width: auto;
-  height: auto;
-}
-.caption {
-  display: block;
-}
+
+
